<resources>
    <string name="app_name">PushToTalk</string>
    <string name="title_activity_main">PushToTalk</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Custom Strings login fragment -->
    <string name="title_login">push to talk</string>
    <string name="username_login">login</string>
    <string name="user_pwd_login">mot de passe</string>
    <string name="btn_login">se connecter</string>
    <string name="txt_copyrights_home">Alcatel-Lucent - Tous droits réservés</string>
    <string name="toast_login_failed">La connexion a échouée</string>
    <!-- Custom Strings canal_list -->
    <string name="title_channel_list">Liste des Canaux</string>
    <string name="btn_channel_one">CANAL 1</string>
    <string name="btn_channel_two">CANAL 2</string>
    <string name="btn_channel_three">CANAL 3</string>
    <string name="btn_channel_four">CANAL 4</string>
    <string name="btn_channel_five">CANAL 5</string>
    <!-- Custom Strings canal -->
    <string name="title_talk_activity">TRANSMISSION</string>
    <string name="btn_disconnect_channel">Deconnexion canal</string>
    <string name="btn_list_channel">Voir liste des canaux</string>
    <string name="txt_push_to_talk">APPUYER POUR PALER</string>
    <string name="txt_conference_joined">Vous avez rejoint la conference</string>
    <string name="txt_conference_left">Vous avez quitté la conference</string>


</resources>