<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.signin.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6741D9">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="@string/title_login"
        android:textColor="#FFFFFF"
        android:textAllCaps="true"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#3E000000"
        android:hint="@string/username_login"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#3E000000"
        android:hint="@string/user_pwd_login"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLogin" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>