<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A2371">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#6200ED"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_room_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/title_talk_activity"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="28dp"
        android:background="#6200ED"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_leave_conference"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:includeFontPadding="false"
        android:paddingStart="15dp"
        android:text="@string/btn_disconnect_channel"
        android:textSize="12sp"
        app:icon="@drawable/logout"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />


    <TextView
        android:id="@+id/text_push_to_talk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_push_to_talk"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/btn_leave_conference"
        app:layout_constraintTop_toBottomOf="@id/btn_leave_conference"
        android:gravity="center"/>

    <ImageButton
        android:id="@+id/btn_push_to_talk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_microphone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_push_to_talk"/>

</androidx.constraintlayout.widget.ConstraintLayout>